// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form> renders 1`] = `
<RCTScrollView
  style={undefined}
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "width": "100%",
          },
          undefined,
          false,
        ]
      }
    />
  </View>
</RCTScrollView>
`;

exports[`<Form> when {attributes} 1`] = `
<RCTScrollView
  style={undefined}
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "width": "100%",
          },
          undefined,
          false,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginBottom": 2.5,
              },
            ]
          }
        >
          username
        </Text>
        <View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            editable={true}
            keyboardType="default"
            multiline={false}
            numberOfLines={undefined}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholderTextColor="#707070"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "minHeight": 44,
                  "paddingHorizontal": 10,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                Object {
                  "borderColor": "#d33c44",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value=""
          />
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../components/Icon/assets/close_contrast.png",
              }
            }
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "backgroundColor": "#d33c44",
                  "borderRadius": 10,
                  "height": 18,
                  "position": "absolute",
                  "right": 10,
                  "top": 13,
                  "width": 18,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
              "maxWidth": "100%",
              "overflow": "hidden",
            },
            Object {
              "width": "49%",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginBottom": 2.5,
              },
            ]
          }
        >
          role
        </Text>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderColor": "#e0e0e0",
                "borderRadius": 2.5,
                "borderWidth": 1,
                "paddingRight": 5,
                "width": "100%",
              },
              undefined,
              false,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                  "height": "auto",
                },
                false,
              ]
            }
          >
            <RCTPicker
              items={
                Array [
                  Object {
                    "label": "frontend",
                    "textColor": undefined,
                    "value": "frontend",
                  },
                  Object {
                    "label": "backend",
                    "textColor": undefined,
                    "value": "backend",
                  },
                  Object {
                    "label": "fullstack",
                    "textColor": undefined,
                    "value": "fullstack",
                  },
                ]
              }
              onChange={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              selectedIndex={1}
              style={
                Array [
                  Object {
                    "height": 216,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
            },
            Object {
              "width": "49%",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginBottom": 2.5,
              },
            ]
          }
        >
          mail
        </Text>
        <View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            editable={true}
            keyboardType="email-address"
            multiline={false}
            numberOfLines={undefined}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Your email..."
            placeholderTextColor="#707070"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "minHeight": 44,
                  "paddingHorizontal": 10,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                Object {
                  "borderColor": "#d33c44",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value=""
          />
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../components/Icon/assets/close_contrast.png",
              }
            }
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "backgroundColor": "#d33c44",
                  "borderRadius": 10,
                  "height": 18,
                  "position": "absolute",
                  "right": 10,
                  "top": 13,
                  "width": 18,
                },
                undefined,
              ]
            }
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 12,
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginTop": 2.5,
                "maxWidth": "100%",
              },
            ]
          }
        >
          we will not send you spam.
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
            },
            Object {
              "width": "49%",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginBottom": 2.5,
              },
            ]
          }
        >
          phone
        </Text>
        <View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            editable={true}
            keyboardType="phone-pad"
            multiline={false}
            numberOfLines={undefined}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="000 000 000"
            placeholderTextColor="#707070"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "minHeight": 44,
                  "paddingHorizontal": 10,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                undefined,
              ]
            }
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
            },
            Object {
              "width": "49%",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginBottom": 2.5,
              },
            ]
          }
        >
          phoneCountryCode
        </Text>
        <View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            countryCode={true}
            editable={true}
            keyboardType="phone-pad"
            multiline={false}
            numberOfLines={undefined}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="+00 000 000 000"
            placeholderTextColor="#707070"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "minHeight": 44,
                  "paddingHorizontal": 10,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                undefined,
              ]
            }
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 12,
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginTop": 2.5,
                "maxWidth": "100%",
              },
            ]
          }
        >
          Using property countryCode
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginBottom": 2.5,
              },
            ]
          }
        >
          bio
        </Text>
        <View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            editable={true}
            keyboardType="default"
            multiline={true}
            numberOfLines={4}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholderTextColor="#707070"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "minHeight": 44,
                  "paddingHorizontal": 10,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                undefined,
              ]
            }
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "row",
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#F5F5F6",
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "#e0e0e0",
                "borderRadius": 3,
                "height": 63,
                "width": 63,
              },
            ]
          }
        >
          <Image
            onLoad={[Function]}
            source={
              Object {
                "uri": "http://soyjavi.com/assets/images/soyjavi.jpg",
              }
            }
            style={
              Object {
                "backgroundColor": "#e0e0e0",
                "borderRadius": 3,
                "height": 63,
                "width": 63,
              }
            }
          />
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Array [
                Object {
                  "flex": 1,
                },
                Object {
                  "marginLeft": 10,
                },
              ],
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "fontWeight": "600",
                  "lineHeight": 16,
                },
                Object {
                  "color": "#707070",
                },
                Object {
                  "marginBottom": 2.5,
                },
              ]
            }
          >
            avatar
          </Text>
          <View>
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              blurOnSubmit={true}
              defaultValue="http://soyjavi.com/assets/images/soyjavi.jpg"
              editable={true}
              keyboardType="default"
              multiline={false}
              numberOfLines={undefined}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholderTextColor="#707070"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderColor": "#e0e0e0",
                    "borderRadius": 2.5,
                    "borderWidth": 1,
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 44,
                    "paddingHorizontal": 10,
                    "paddingVertical": 7.5,
                    "width": "100%",
                  },
                  false,
                  false,
                  undefined,
                ]
              }
              underlineColorAndroid="transparent"
              value="http://soyjavi.com/assets/images/soyjavi.jpg"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "flex-end",
              "display": "flex",
              "flexDirection": "row",
              "height": 39,
              "marginBottom": 10,
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <RCTSwitch
          activeThumbColor="#10c0bc"
          activeTrackColor="#e0e0e0"
          disabled={false}
          error={undefined}
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onValueChange={[Function]}
          style={
            Array [
              Object {
                "height": 31,
                "width": 51,
              },
              Object {
                "height": 24,
                "marginRight": 10,
              },
            ]
          }
          value={false}
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginBottom": 2.5,
              },
            ]
          }
        >
          isPublic
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignContent": "flex-start",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "space-between",
              "width": "100%",
            },
            undefined,
            Object {
              "borderColor": "#e0e0e0",
              "borderRadius": 2.5,
              "borderWidth": 1,
              "marginBottom": 10,
              "paddingHorizontal": 10,
              "paddingTop": 10,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 20,
                "fontWeight": "700",
                "letterSpacing": -0.83,
                "lineHeight": 22,
              },
              false,
              Object {
                "marginBottom": 10,
                "minWidth": "100%",
              },
            ]
          }
        >
          Social Networks
        </Text>
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Object {
                "width": "32%",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "fontWeight": "600",
                  "lineHeight": 16,
                },
                Object {
                  "color": "#707070",
                },
                Object {
                  "marginBottom": 2.5,
                },
              ]
            }
          >
            twitter
          </Text>
          <View>
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              blurOnSubmit={true}
              editable={true}
              keyboardType="default"
              multiline={false}
              numberOfLines={undefined}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholderTextColor="#707070"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderColor": "#e0e0e0",
                    "borderRadius": 2.5,
                    "borderWidth": 1,
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 44,
                    "paddingHorizontal": 10,
                    "paddingVertical": 7.5,
                    "width": "100%",
                  },
                  false,
                  false,
                  undefined,
                ]
              }
              underlineColorAndroid="transparent"
              value=""
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Object {
                "width": "32%",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "fontWeight": "600",
                  "lineHeight": 16,
                },
                Object {
                  "color": "#707070",
                },
                Object {
                  "marginBottom": 2.5,
                },
              ]
            }
          >
            facebook
          </Text>
          <View>
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              blurOnSubmit={true}
              editable={true}
              keyboardType="default"
              multiline={false}
              numberOfLines={undefined}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholderTextColor="#707070"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderColor": "#e0e0e0",
                    "borderRadius": 2.5,
                    "borderWidth": 1,
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 44,
                    "paddingHorizontal": 10,
                    "paddingVertical": 7.5,
                    "width": "100%",
                  },
                  false,
                  false,
                  undefined,
                ]
              }
              underlineColorAndroid="transparent"
              value=""
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Object {
                "width": "32%",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "fontWeight": "600",
                  "lineHeight": 16,
                },
                Object {
                  "color": "#707070",
                },
                Object {
                  "marginBottom": 2.5,
                },
              ]
            }
          >
            github
          </Text>
          <View>
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              blurOnSubmit={true}
              editable={true}
              keyboardType="default"
              multiline={false}
              numberOfLines={undefined}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholderTextColor="#707070"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderColor": "#e0e0e0",
                    "borderRadius": 2.5,
                    "borderWidth": 1,
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 44,
                    "paddingHorizontal": 10,
                    "paddingVertical": 7.5,
                    "width": "100%",
                  },
                  false,
                  false,
                  Object {
                    "borderColor": "#d33c44",
                  },
                ]
              }
              underlineColorAndroid="transparent"
              value=""
            />
            <Image
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../components/Icon/assets/close_contrast.png",
                }
              }
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "height": 20,
                    "width": 20,
                  },
                  Object {
                    "backgroundColor": "#d33c44",
                    "borderRadius": 10,
                    "height": 18,
                    "position": "absolute",
                    "right": 10,
                    "top": 13,
                    "width": 18,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
              "zIndex": 1,
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Object {
                "marginBottom": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "fontWeight": "600",
                  "lineHeight": 16,
                },
                Object {
                  "color": "#707070",
                },
                Object {
                  "marginBottom": 2.5,
                },
              ]
            }
          >
            languages
          </Text>
          <View>
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              blurOnSubmit={true}
              editable={true}
              keyboardType="default"
              multiline={false}
              numberOfLines={undefined}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              placeholderTextColor="#707070"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderColor": "#e0e0e0",
                    "borderRadius": 2.5,
                    "borderWidth": 1,
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 44,
                    "paddingHorizontal": 10,
                    "paddingVertical": 7.5,
                    "width": "100%",
                  },
                  false,
                  false,
                  undefined,
                ]
              }
              underlineColorAndroid="transparent"
              value=""
            />
          </View>
        </View>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        nativeID={undefined}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
        testID={undefined}
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "borderColor": "#707070",
                "borderRadius": 2,
                "borderWidth": 2,
                "height": 20,
                "justifyContent": "center",
                "width": 20,
              },
              false,
              false,
            ]
          }
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "opacity": 0,
                "transform": Array [
                  Object {
                    "scale": 0,
                  },
                ],
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../components/Icon/assets/done_contrast.png",
                }
              }
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "height": 20,
                    "width": 20,
                  },
                  Object {
                    "height": 12,
                    "width": 12,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 14,
                "lineHeight": 24,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginLeft": 10,
              },
            ]
          }
        >
          ACCEPT, terms & conditions
        </Text>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "#e0e0e0",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`<Form> when {color} 1`] = `
<RCTScrollView
  style={undefined}
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "width": "100%",
          },
          undefined,
          false,
        ]
      }
    />
  </View>
</RCTScrollView>
`;

exports[`<Form> when {data} 1`] = `
<RCTScrollView
  style={undefined}
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "width": "100%",
          },
          undefined,
          false,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginBottom": 2.5,
              },
            ]
          }
        >
          username
        </Text>
        <View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            editable={true}
            keyboardType="default"
            multiline={false}
            numberOfLines={undefined}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholderTextColor="#707070"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "minHeight": 44,
                  "paddingHorizontal": 10,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                Object {
                  "borderColor": "#d33c44",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value=""
          />
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../components/Icon/assets/close_contrast.png",
              }
            }
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "backgroundColor": "#d33c44",
                  "borderRadius": 10,
                  "height": 18,
                  "position": "absolute",
                  "right": 10,
                  "top": 13,
                  "width": 18,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
              "maxWidth": "100%",
              "overflow": "hidden",
            },
            Object {
              "width": "49%",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginBottom": 2.5,
              },
            ]
          }
        >
          role
        </Text>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderColor": "#e0e0e0",
                "borderRadius": 2.5,
                "borderWidth": 1,
                "paddingRight": 5,
                "width": "100%",
              },
              undefined,
              false,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                  "height": "auto",
                },
                false,
              ]
            }
          >
            <RCTPicker
              items={
                Array [
                  Object {
                    "label": "frontend",
                    "textColor": undefined,
                    "value": "frontend",
                  },
                  Object {
                    "label": "backend",
                    "textColor": undefined,
                    "value": "backend",
                  },
                  Object {
                    "label": "fullstack",
                    "textColor": undefined,
                    "value": "fullstack",
                  },
                ]
              }
              onChange={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              selectedIndex={1}
              style={
                Array [
                  Object {
                    "height": 216,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
            },
            Object {
              "width": "49%",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginBottom": 2.5,
              },
            ]
          }
        >
          mail
        </Text>
        <View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            editable={true}
            keyboardType="email-address"
            multiline={false}
            numberOfLines={undefined}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Your email..."
            placeholderTextColor="#707070"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "minHeight": 44,
                  "paddingHorizontal": 10,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                Object {
                  "borderColor": "#d33c44",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value=""
          />
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../components/Icon/assets/close_contrast.png",
              }
            }
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "backgroundColor": "#d33c44",
                  "borderRadius": 10,
                  "height": 18,
                  "position": "absolute",
                  "right": 10,
                  "top": 13,
                  "width": 18,
                },
                undefined,
              ]
            }
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 12,
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginTop": 2.5,
                "maxWidth": "100%",
              },
            ]
          }
        >
          we will not send you spam.
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
            },
            Object {
              "width": "49%",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginBottom": 2.5,
              },
            ]
          }
        >
          phone
        </Text>
        <View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            editable={true}
            keyboardType="phone-pad"
            multiline={false}
            numberOfLines={undefined}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="000 000 000"
            placeholderTextColor="#707070"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "minHeight": 44,
                  "paddingHorizontal": 10,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                undefined,
              ]
            }
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
            },
            Object {
              "width": "49%",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginBottom": 2.5,
              },
            ]
          }
        >
          phoneCountryCode
        </Text>
        <View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            countryCode={true}
            editable={true}
            keyboardType="phone-pad"
            multiline={false}
            numberOfLines={undefined}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="+00 000 000 000"
            placeholderTextColor="#707070"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "minHeight": 44,
                  "paddingHorizontal": 10,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                undefined,
              ]
            }
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 12,
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginTop": 2.5,
                "maxWidth": "100%",
              },
            ]
          }
        >
          Using property countryCode
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginBottom": 2.5,
              },
            ]
          }
        >
          bio
        </Text>
        <View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            editable={true}
            keyboardType="default"
            multiline={true}
            numberOfLines={4}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholderTextColor="#707070"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "minHeight": 44,
                  "paddingHorizontal": 10,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                undefined,
              ]
            }
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "row",
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#F5F5F6",
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "#e0e0e0",
                "borderRadius": 3,
                "height": 63,
                "width": 63,
              },
            ]
          }
        >
          <Image
            onLoad={[Function]}
            source={
              Object {
                "uri": "http://soyjavi.com/assets/images/soyjavi.jpg",
              }
            }
            style={
              Object {
                "backgroundColor": "#e0e0e0",
                "borderRadius": 3,
                "height": 63,
                "width": 63,
              }
            }
          />
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Array [
                Object {
                  "flex": 1,
                },
                Object {
                  "marginLeft": 10,
                },
              ],
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "fontWeight": "600",
                  "lineHeight": 16,
                },
                Object {
                  "color": "#707070",
                },
                Object {
                  "marginBottom": 2.5,
                },
              ]
            }
          >
            avatar
          </Text>
          <View>
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              blurOnSubmit={true}
              defaultValue="http://soyjavi.com/assets/images/soyjavi.jpg"
              editable={true}
              keyboardType="default"
              multiline={false}
              numberOfLines={undefined}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholderTextColor="#707070"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderColor": "#e0e0e0",
                    "borderRadius": 2.5,
                    "borderWidth": 1,
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 44,
                    "paddingHorizontal": 10,
                    "paddingVertical": 7.5,
                    "width": "100%",
                  },
                  false,
                  false,
                  undefined,
                ]
              }
              underlineColorAndroid="transparent"
              value="http://soyjavi.com/assets/images/soyjavi.jpg"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "flex-end",
              "display": "flex",
              "flexDirection": "row",
              "height": 39,
              "marginBottom": 10,
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <RCTSwitch
          activeThumbColor="#10c0bc"
          activeTrackColor="#e0e0e0"
          disabled={false}
          error={undefined}
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onValueChange={[Function]}
          style={
            Array [
              Object {
                "height": 31,
                "width": 51,
              },
              Object {
                "height": 24,
                "marginRight": 10,
              },
            ]
          }
          value={false}
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 14,
                "fontWeight": "600",
                "lineHeight": 16,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginBottom": 2.5,
              },
            ]
          }
        >
          isPublic
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignContent": "flex-start",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "space-between",
              "width": "100%",
            },
            undefined,
            Object {
              "borderColor": "#e0e0e0",
              "borderRadius": 2.5,
              "borderWidth": 1,
              "marginBottom": 10,
              "paddingHorizontal": 10,
              "paddingTop": 10,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 20,
                "fontWeight": "700",
                "letterSpacing": -0.83,
                "lineHeight": 22,
              },
              false,
              Object {
                "marginBottom": 10,
                "minWidth": "100%",
              },
            ]
          }
        >
          Social Networks
        </Text>
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Object {
                "width": "32%",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "fontWeight": "600",
                  "lineHeight": 16,
                },
                Object {
                  "color": "#707070",
                },
                Object {
                  "marginBottom": 2.5,
                },
              ]
            }
          >
            twitter
          </Text>
          <View>
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              blurOnSubmit={true}
              editable={true}
              keyboardType="default"
              multiline={false}
              numberOfLines={undefined}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholderTextColor="#707070"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderColor": "#e0e0e0",
                    "borderRadius": 2.5,
                    "borderWidth": 1,
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 44,
                    "paddingHorizontal": 10,
                    "paddingVertical": 7.5,
                    "width": "100%",
                  },
                  false,
                  false,
                  undefined,
                ]
              }
              underlineColorAndroid="transparent"
              value=""
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Object {
                "width": "32%",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "fontWeight": "600",
                  "lineHeight": 16,
                },
                Object {
                  "color": "#707070",
                },
                Object {
                  "marginBottom": 2.5,
                },
              ]
            }
          >
            facebook
          </Text>
          <View>
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              blurOnSubmit={true}
              editable={true}
              keyboardType="default"
              multiline={false}
              numberOfLines={undefined}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholderTextColor="#707070"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderColor": "#e0e0e0",
                    "borderRadius": 2.5,
                    "borderWidth": 1,
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 44,
                    "paddingHorizontal": 10,
                    "paddingVertical": 7.5,
                    "width": "100%",
                  },
                  false,
                  false,
                  undefined,
                ]
              }
              underlineColorAndroid="transparent"
              value=""
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Object {
                "width": "32%",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "fontWeight": "600",
                  "lineHeight": 16,
                },
                Object {
                  "color": "#707070",
                },
                Object {
                  "marginBottom": 2.5,
                },
              ]
            }
          >
            github
          </Text>
          <View>
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              blurOnSubmit={true}
              editable={true}
              keyboardType="default"
              multiline={false}
              numberOfLines={undefined}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholderTextColor="#707070"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderColor": "#e0e0e0",
                    "borderRadius": 2.5,
                    "borderWidth": 1,
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 44,
                    "paddingHorizontal": 10,
                    "paddingVertical": 7.5,
                    "width": "100%",
                  },
                  false,
                  false,
                  Object {
                    "borderColor": "#d33c44",
                  },
                ]
              }
              underlineColorAndroid="transparent"
              value=""
            />
            <Image
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../components/Icon/assets/close_contrast.png",
                }
              }
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "height": 20,
                    "width": 20,
                  },
                  Object {
                    "backgroundColor": "#d33c44",
                    "borderRadius": 10,
                    "height": 18,
                    "position": "absolute",
                    "right": 10,
                    "top": 13,
                    "width": 18,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
              "zIndex": 1,
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Object {
                "marginBottom": 0,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "fontWeight": "600",
                  "lineHeight": 16,
                },
                Object {
                  "color": "#707070",
                },
                Object {
                  "marginBottom": 2.5,
                },
              ]
            }
          >
            languages
          </Text>
          <View>
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              blurOnSubmit={true}
              editable={true}
              keyboardType="default"
              multiline={false}
              numberOfLines={undefined}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              placeholderTextColor="#707070"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderColor": "#e0e0e0",
                    "borderRadius": 2.5,
                    "borderWidth": 1,
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontSize": 16,
                    "fontWeight": "400",
                    "minHeight": 44,
                    "paddingHorizontal": 10,
                    "paddingVertical": 7.5,
                    "width": "100%",
                  },
                  false,
                  false,
                  undefined,
                ]
              }
              underlineColorAndroid="transparent"
              value=""
            />
          </View>
        </View>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        nativeID={undefined}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
        testID={undefined}
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "borderColor": "#707070",
                "borderRadius": 2,
                "borderWidth": 2,
                "height": 20,
                "justifyContent": "center",
                "width": 20,
              },
              false,
              false,
            ]
          }
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "opacity": 0,
                "transform": Array [
                  Object {
                    "scale": 0,
                  },
                ],
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../components/Icon/assets/done_contrast.png",
                }
              }
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "height": 20,
                    "width": 20,
                  },
                  Object {
                    "height": 12,
                    "width": 12,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 14,
                "lineHeight": 24,
              },
              Object {
                "color": "#707070",
              },
              Object {
                "marginLeft": 10,
              },
            ]
          }
        >
          ACCEPT, terms & conditions
        </Text>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "backgroundColor": "#e0e0e0",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`<Form> when {onChange} 1`] = `
<RCTScrollView
  style={undefined}
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "width": "100%",
          },
          undefined,
          false,
        ]
      }
    />
  </View>
</RCTScrollView>
`;

exports[`<Form> when {onValid} 1`] = `
<RCTScrollView
  style={undefined}
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "width": "100%",
          },
          undefined,
          false,
        ]
      }
    />
  </View>
</RCTScrollView>
`;

exports[`<Form> when {style} 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "rgba(0,255,0,0.25)",
      "padding": 20,
    }
  }
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "width": "100%",
          },
          undefined,
          false,
        ]
      }
    />
  </View>
</RCTScrollView>
`;

exports[`<Form> when {title} 1`] = `
<RCTScrollView
  style={undefined}
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "width": "100%",
          },
          undefined,
          false,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontFamily": undefined,
              "fontSize": 20,
              "fontWeight": "700",
              "letterSpacing": -0.83,
              "lineHeight": 22,
            },
            false,
            Object {
              "marginBottom": 10,
              "minWidth": "100%",
            },
          ]
        }
      >
        Hello World
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
